--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.0",
-    "trpc-koa-adapter": "^1.1.3"
+    "trpc-koa-adapter": "^1.1.3",
+    "zod": "^3.21.4"
   },
   "alias": {
     "scheduler/tracing": "../../node_modules/scheduler/tracing-profiling"
